rumbas/src/question/snapshots/rumbas__question__custom_part_type__examples_customparttypedefinitioninput__compile_examples-6.snap
---
source: rumbas/src/question/custom_part_type.rs
expression: "&example"
---
type_name: "template:template_key"
description: "template:template_key"
settings: "template:template_key"
can_be_gap: "template:template_key"
can_be_step: "template:template_key"
marking_notes: "template:template_key"
help_url: "template:template_key"
published: "template:template_key"
extensions:
  template_key: template_key
  default_value: ~
input_widget:
  type: string
  hint:
    value: "template:template_key"
    static: "template:template_key"
  correct_answer: "template:template_key"
  allow_empty:
    template_key: template_key
    default_value: ~

