rumbas/src/question/snapshots/rumbas__question__custom_part_type__examples_customparttypedefinitioninput__compile_examples-7.snap
---
source: rumbas/src/question/custom_part_type.rs
expression: "&example"
---
type_name:
  template_key: template_key
  default_value: ~
description:
  template_key: template_key
  default_value: ~
settings:
  template_key: template_key
  default_value: ~
can_be_gap:
  template_key: template_key
  default_value: ~
can_be_step:
  template_key: template_key
  default_value: ~
marking_notes:
  template_key: template_key
  default_value: ~
help_url:
  template_key: template_key
  default_value: ~
published:
  template_key: template_key
  default_value: ~
extensions: ~
input_widget:
  type: string
  hint:
    value:
      template_key: template_key
      default_value: ~
    static:
      template_key: template_key
      default_value: ~
  correct_answer:
    template_key: template_key
    default_value: ~
  allow_empty: ~

